--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ Swal.fire(
 <img src="img/momo.png" height="55px">
 <div>&nbsp;
 <h4 class="title title--h4">Ví Momo</h4>
-<p><b>HUỲNH HOÀI NGUYÊN</b><br><b>0899455912</b></p>
+<p><b>HUỲNH TẤN ẢNH</b><br><b>0899455912</b></p>
 <button type="button" style="height:30px;width:100px" class="btn btn-primary" onclick="copy('0899455912')">COPY</button>
 </div>
 </div>
